rev 582 (2019-03-11) (krueschan)
- minor changes to paper (add CSO Review 2018)

rev 581 (2019-03-07) (krueschan)
- changed presentation of LULUCF (now disabled checkbox with explanation why we don't support it anymore)

rev 579-580 (2019-02-23) (krueschan)
- typo
- changed suggested docker install to port 8080
- edit calc.js to work with non-standard ports

rev 577-578 (2019-02-22) (krueschan)
- added Dockerfile and documentation for dockerized install of cerc-web

rev 574-576 (2019-02-21) (krueschan)
- installing guzzle via composer after all
- minor bug fixes

rev 570-573 (2019-02-20) (krueschan)
- fixed undefined index and variable warnings in gdrs_country_report and pledge database manager
- removed old GDRs reference and static css link from calc.js
- replaced deprecated mysql_* methods in pledge functions and pledge db manager

rev 565-569 (2019-02-16) (krueschan)
- serialize/unserialize database name for cookie storage
- replaced PEAR HTTP_Request with guzzle HTTP client lib in db manager
- replaced PEAR HTTP_Request with guzzle HTTP client lib to get pledges
- sanitize GET/POST parameters in API
- replaced PEAR HTTP_Request with guzzle HTTP client library in API example code

rev 560-564 (2019-02-15) (krueschan)
- updated baseline description in chart key
- removed obsolete experimental code (greenband)
- fixed LULUCF exclusion in index.php sidebar
- minor changes to paper bibliography
- fixed typo bug from rev 559

rev 559 (2019-02-12) (krueschan)
- created new 'EmptyFramework' class which is an extension of the abstract 'Framework' class without actually extending anything. this is so the methods of the abstract class can be accessed through initiated instances of the class without having to chose a specific framework (e.g. 'GreenhouseDevRights')