@@ -64,7 +64,7 @@ if (is_file('inc/popup_notice.php')) {
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon"  href="img/favicon_32.ico" />
-    <link rel="stylesheet" href="css/cescalc.css?v=1.2">
+    <link rel="stylesheet" href="css/cescalc.css?v=1.3">
     <link rel="stylesheet" href="css/tablesorter.css?v=1.0">
     <link rel="stylesheet" href="css/smoothness/jquery-ui-1.8.9.custom.css?v=1.0" />
     <!--[if IE 6]>
