@@ -1,4 +1,5 @@
-rev 582 (2019-03-11) (krueschan)
+rev 582-583 (2019-03-11) (krueschan)
+- add introductory help text to settings splash screen
 - minor changes to paper (add CSO Review 2018)
 
 rev 581 (2019-03-07) (krueschan)
